Fixed spacing on lets work together section in about.html

--- a/css/index.css
+++ b/css/index.css
@@ -303,6 +303,10 @@ header {
     color: black;
 }
 
+#letsworktogether {
+    margin-bottom: 30px;
+}
+
 /* Contact */
 
 .contact {
